--- a/common/gtk-3.0/3.16/_common.scss
+++ b/common/gtk-3.0/3.16/_common.scss
@@ -1424,8 +1424,8 @@ GtkTreeView.view {                                      // treeview grid lines a
       background-color: $selected_fg_color;
     }
   }
-
   &.trough, &.trough:selected { // progress bar trough in treeviews
+    color: $fg_color;
     background-color: $button_border;
     border-radius: 3px;
     border-width: 0;
