--- a/common/gtk-3.0/3.16/gtk-contained.css
+++ b/common/gtk-3.0/3.16/gtk-contained.css
@@ -1135,6 +1135,7 @@ GtkTreeView.view {
       box-shadow: none;
       background-color: #ffffff; }
   GtkTreeView.view.trough, GtkTreeView.view.trough:selected {
+    color: #5c616c;
     background-color: #cfd6e6;
     border-radius: 3px;
     border-width: 0; }
